@startuml
class CompanySection {
- List<Company> companies
+ List<Company> getCompanies()
+ boolean equals(Object)
+ int hashCode()
+ String toString()
}
class TextSection {
- String info
+ String getInfo()
+ String toString()
+ boolean equals(Object)
+ int hashCode()
}
class Period {
- LocalDate dateStart
- LocalDate dateEnd
- String title
- String description
+ LocalDate getDateStart()
+ LocalDate getDateEnd()
+ String getTitle()
+ String getDescription()
- {static} LocalDate dateParse(String)
+ boolean equals(Object)
+ int hashCode()
+ String toString()
}
class Company {
- Link name
- List<Period> periods
+ Link getName()
+ List<Period> getPeriods()
+ void addPeriods(String)
+ boolean equals(Object)
+ int hashCode()
+ String toString()
}
class Resume {
- String uuid
- String fullName
+ EnumMap<ContactType,Link> contacts
+ EnumMap<SectionType,Section> sections
+ String getUuid()
+ String getFullName()
+ Link getContact(ContactType)
+ Section getSection(SectionType)
+ boolean equals(Object)
+ int hashCode()
+ String toString()
}
class Section {
}
enum SectionType {
+  PERSONAL
+  OBJECTIVE
+  ACHIEVEMENT
+  QUALIFICATIONS
+  EXPERIENCE
+  EDUCATION
- String title
+ String getTitle()
+ String toString()
}
class Link {
- String name
- String url
+ String getName()
+ String getUrl()
+ boolean equals(Object)
+ int hashCode()
+ String toString()
}
enum ContactType {
+  PHONE
+  SKYPE
+  MAIL
+  LINKEDIN
+  GITHUB
+  STACKOVERFLOW
+  HOMEPAGE
- String title
+ String getTitle()
+ String toString()
}
class ListSection {
- List<String> info
+ List<String> getInfo()
+ String toString()
}


Section <|-- CompanySection
Section <|-- TextSection
Section <|-- ListSection
@enduml